Update index.html as this app is not yet on flathub.org.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <body>
   <h1>Questscribe</h1>
   <img class="screenshot" src="screenshots_combined.png"></img>
-  <a href='https://flathub.org/apps/org.gimp.GIMP'><img width='200' alt='Download on Flathub'
-      src='https://dl.flathub.org/assets/badges/flathub-badge-i-en.png' /></a>
+    <!--<a href='https://flathub.org/apps/org.gimp.GIMP'><img width='200' alt='Download on Flathub'
+src='https://dl.flathub.org/assets/badges/flathub-badge-i-en.png' /></a>-->
   <a class="badge" href="https://github.com/qwertzuiopy/Questscribe"><b>{ }</b> Source Code</a>
 </body>
 
